// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`compressionOptions\` option matches snapshot for \`{ compressionOptions: { level: 1 } }\` value: assets 1`] = `
Array [
  Array [
    "1.async.9ada34e1a37e6db8ef40.js",
    130,
  ],
  Array [
    "1.async.9ada34e1a37e6db8ef40.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73332,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    404,
  ],
  Array [
    "js.f0111e97a13538df48f2.js",
    10212,
  ],
  Array [
    "js.f0111e97a13538df48f2.js.gz",
    3154,
  ],
]
`;

exports[`when applied with \`compressionOptions\` option matches snapshot for \`{ compressionOptions: { level: 1 } }\` value: errors 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot for \`{ compressionOptions: { level: 1 } }\` value: warnings 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: assets 1`] = `
Array [
  Array [
    "1.async.9ada34e1a37e6db8ef40.js",
    130,
  ],
  Array [
    "1.async.9ada34e1a37e6db8ef40.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.f0111e97a13538df48f2.js",
    10212,
  ],
  Array [
    "js.f0111e97a13538df48f2.js.gz",
    2769,
  ],
]
`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: errors 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: warnings 1`] = `Array []`;
